# Prisoners-Gambit

./: .gitignore  README.md  pyproject.toml  render.yaml
docs/: architecture.md  choice-strategy-refactor.md  event-model.md  gameplay-design.md  powerup-design.md  roadmap.md  testing-strategy.md
scripts/: run_dev.bat  run_dev.sh
src/prisoners_gambit/: __main__.py
src/prisoners_gambit/adapters/: __init__.py  json_event_recorder.py  logging_event_listener.py
src/prisoners_gambit/app/: __init__.py  bootstrap.py  heir_view_mapping.py  interaction_controller.py  run_application.py  (+1 more)
tests/: test_analysis.py  test_civil_war_context.py  test_civil_war_phase.py  test_content_generation.py  test_events.py  test_evolution.py  test_featured_inference.py  test_floor_events.py  test_genome_edits.py  test_interaction_controller.py  test_lineage_rules.py  test_offer_divergence.py  test_offer_guidance.py  test_population.py  test_powerups.py  test_progression.py  test_referendum_parity.py  test_regressions.py  test_run_application.py  test_run_session.py  test_scoring.py  test_strategy.py  test_successor_analysis.py  test_support_builders.py  test_terminal_renderer.py  test_tournament.py  test_view_models.py  test_web_session_support_modules.py  test_web_slice.py  test_web_ui_runtime.py
tests/contracts/: test_web_session_progression_contracts.py
tests/integration/: test_seeded_run_slices.py
tests/invariants/: test_simulation_invariants.py
tests/regression/: test_web_slice_state_snapshots.py
tests/support/: __init__.py  builders.py  session_driver.py
(+59 files in other folders)
