[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prisoners-gambit"
version = "0.1.0"
description = "A Prisoner's Dilemma roguelike prototype with UI-ready architecture and toggleable logging"
readme = "README.md"
authors = [{ name = "Josh Moeller" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]